--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "tokenizer-wasm"
+name = "count-tokens"
 version = "0.1.0"
-edition = "2021"
+edition = "2025"
 
 [lib]
 crate-type = ["cdylib"]
